Global exception handler, payment process & card balances added
